# SurfaceCodeDecodingBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  setup.py
decoder/: CMakeLists.txt  decoder.hpp
decoder/base/: CMakeLists.txt  decoder_base.cpp  decoder_base.hpp
decoder/machine_learning/: CMakeLists.txt  machine_learning.hpp  ml_decoder.cpp  ml_decoder.hpp
decoder/machine_learning/deep_decoder/: dataset.py  model.py  test_io.py  two_level_decoder.py
decoder/matching/: CMakeLists.txt  iterated_decoder.cpp  iterated_decoder.hpp  matching_decoder.hpp  matching_util.cpp  matching_util.hpp  simple_matching_decoder.cpp  simple_matching_decoder.hpp
deep_decoder_util/: CMakeLists.txt  utility.cpp  utility.hpp
error_dynamics/: CMakeLists.txt  error_dynamics.hpp  planar_surface_code.cpp  planar_surface_code.hpp  rectangular_surface_code.cpp  rectangular_surface_code.hpp
error_dynamics/code_scheme/: CMakeLists.txt  code_scheme.hpp  planar_scheme.cpp  planar_scheme.hpp  rectangular_scheme.cpp  rectangular_scheme.hpp
error_dynamics/error_model/: CMakeLists.txt  error_model.hpp  error_model_base.hpp  iid_error.cpp  iid_error.hpp
error_dynamics/util/: CMakeLists.txt  constant.hpp  display.hpp  exception.cpp  exception.hpp  util.hpp
example/: CMakeLists.txt  demo_MWPE_decoder.cpp  demo_MWPM_decoder.cpp  demo_MWPM_decoder_2d.cpp  demo_MWPM_decoder_3d.cpp  demo_coding_scheme.cpp  demo_deep_decoder_util.py  demo_error_dynamics.cpp  demo_error_model.cpp  demo_iterated_decoder_2d.cpp  demo_ml_decoder.cpp  demo_syndrome_graph.cpp
exec/: CMakeLists.txt  MWPE_error_rate_2d.cpp
exec/Iterated_2d/: CMakeLists.txt  IteratedDecoder_error_rate_2d.cpp
exec/MWPE_2d/: MWPE_error_rate_2d.cpp
exec/MWPM_2d/: CMakeLists.txt  MWPM_error_rate_2d.cpp
exec/MWPM_3d/: CMakeLists.txt  MWPM_error_rate_3d.cpp
exec/TwoLevelML_2d/: CMakeLists.txt  TwoLevelML_error_rate_2d.cpp
